--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -6,7 +6,7 @@
   </div>
 </header>
 
-<div class="container">
+<div class="container" ng-hide="Auth.isLoggedInSync();">
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
