Added rudimentary locations component

--- a/client/app/account/groups/groups.html
+++ b/client/app/account/groups/groups.html
@@ -17,7 +17,7 @@
       <p>Name: <input type="text" class="form-control" placeholder="Enter a group name..." ng-model="$ctrl.newGroup.name"></p>
 	  <p>Comment: <input type="text" class="form-control" placeholder="Enter a comment for the group..." ng-model="$ctrl.newGroup.info"></p>
 
-	  <button class="btn btn-primary" ng-click="$ctrl.addGroup()">Add Group</button>
+	  <button type="submit" class="btn btn-primary" ng-click="$ctrl.addGroup()">Add Group</button>
     </div>
   </div>
 </div>
